# GC-Proyecto-1

./: CMakeLists.txt  README.md
src/: camera.h  color.h  fragment.h  gl.h  main.cpp  noise.h  object.h  shaders.h  triangle.h  uniforms.h
